--- a/login.html
+++ b/login.html
@@ -38,27 +38,22 @@ http://demos.jquerymobile.com/1.4.4/theme-default/
         <form>
             <!-- Select Employee Name -->
             <div class="ui-field-contain">
-                <label for="select-custom-1" class="select">Employee Name:</label>
-                <select name="select-custom-1" id="select-custom-1" data-native-menu="false">
-                    <option value="1">Earl Extraordinary</option>
-                    <option value="2">Vince Ventures</option>
-                    <option value="3">Employee 3</option>
+                <label for="select-employee" class="select">Employee Name:</label>
+                <select name="select-employee" id="select-employee" data-native-menu="false">
+                    <option value="Earl Extraordinary">Earl Extraordinary</option>
+                    <option value="Vince Ventures">Vince Ventures</option>
+                    <option value="Employee 3">Employee 3</option>
                 </select>
             </div>
 
             <!-- Select Employee Task -->
             <div class="ui-field-contain">
-                <fieldset data-role="controlgroup">
-                    <legend>Task:</legend>
-                    <input type="radio" name="radio-v-1" id="radio-v-1a">
-                    <label for="radio-v-1a">Sorting</label>
-                    <input type="radio" name="radio-v-1" id="radio-v-1b">
-                    <label for="radio-v-1b">Washing</label>
-                    <input type="radio" name="radio-v-1" id="radio-v-1c">
-                    <label for="radio-v-1c">Drying</label>
-                    <input type="radio" name="radio-v-1" id="radio-v-1d">
-                    <label for="radio-v-1d">Sorting</label>
-                </fieldset>
+                <label for="select-task" class="select">Task Name:</label>
+                <select name="select-task" id="select-task" data-native-menu="false">
+                    <option value="0">Sorting</option>
+                    <option value="1">Washing/Drying</option>
+                    <option value="2">Folding</option>
+                </select>
             </div>
 
             <!-- Login Button -->
@@ -70,7 +65,6 @@ http://demos.jquerymobile.com/1.4.4/theme-default/
     <div data-role="footer" data-position="fixed">
     </div>
     <!-- /footer -->
-
 </div><!-- /page -->
 
 </body>
