Reorganization and Renaming
Don’t mind me, just changing around some DB stuff and reworking the
client side functionality for the washer/dryer page.

--- a/folding.html
+++ b/folding.html
@@ -9,6 +9,8 @@ http://demos.jquerymobile.com/1.4.4/theme-default/
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>EV Laundry - Folding</title>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.css" />
+    <link rel="stylesheet" href="themes/Theme6.min.css"/>
+    <link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.js"></script>
     <script src="js/folding.js"></script>
@@ -47,7 +49,7 @@ http://demos.jquerymobile.com/1.4.4/theme-default/
         <div data-role="navbar">
             <ul>
                 <li><a href="sorting.html" data-ajax="false">Sorting</a></li>
-                <li><a href="laundry.html" data-ajax="false">Washing and Drying</a></li>
+                <li><a href="laundry_room.html" data-ajax="false">Washing and Drying</a></li>
                 <li><a href="#" data-ajax="false" class="ui-link ui-btn ui-btn-active ui-state-persist">Folding</a></li>
             </ul>
         </div>
