Washer load/unload
There are a few bugs here and there but the UI is talking to the DB.

--- a/folding.html
+++ b/folding.html
@@ -49,7 +49,8 @@ http://demos.jquerymobile.com/1.4.4/theme-default/
         <div data-role="navbar">
             <ul>
                 <li><a href="sorting.html" data-ajax="false">Sorting</a></li>
-                <li><a href="laundry_room.html" data-ajax="false">Washing and Drying</a></li>
+                <li><a href="washing.html" data-ajax="false">Washing</a></li>
+                <li><a href="drying.html" data-ajax="false">Drying</a></li>
                 <li><a href="#" data-ajax="false" class="ui-link ui-btn ui-btn-active ui-state-persist">Folding</a></li>
             </ul>
         </div>
