--- a/sorting.html
+++ b/sorting.html
@@ -59,7 +59,8 @@ http://demos.jquerymobile.com/1.4.4/theme-default/
         <div data-role="navbar">
             <ul>
                 <li><a href="#"  data-ajax="false" class="ui-link ui-btn ui-btn-active ui-state-persist">Sorting</a></li>
-                <li><a href="laundry_room.html" data-ajax="false">Washing and Drying</a></li>
+                <li><a href="washing.html" data-ajax="false" rel="external">Washing</a></li>
+                <li><a href="drying.html" data-ajax="false">Drying</a></li>
                 <li><a href="folding.html" data-ajax="false">Folding</a></li>
             </ul>
         </div>
