Wash/Dry Loading/Unloading
Plus some small bugs

--- a/login.html
+++ b/login.html
@@ -53,8 +53,9 @@ http://demos.jquerymobile.com/1.4.4/theme-default/
                 <label for="select-task" class="select">Task Name:</label>
                 <select name="select-task" id="select-task" data-native-menu="false">
                     <option value="0">Sorting</option>
-                    <option value="1">Washing/Drying</option>
-                    <option value="2">Folding</option>
+                    <option value="1">Washing</option>
+                    <option value="2">Drying</option>
+                    <option value="3">Folding</option>
                 </select>
             </div>
 
