--- a/washing.html
+++ b/washing.html
@@ -115,7 +115,7 @@ http://demos.jquerymobile.com/1.4.4/theme-default/
 
             <!-- Form Submission -->
             <div class="ui-field-contain">
-                <input type="submit" id="empty-washer-submit-btn" value="Submit">
+                <input type="submit" id="load-washer-submit-btn" value="Submit">
             </div>
         </form>  <!-- /form -->
     </div>
