Various bug fixes
#22 by adding a line in the theme css, found via googling.

#18 fixed for Washing and drying. Currently it reloads the DOM for all
of the machines when an unload or load occurs. I also added a refresh
page button to facilitate consistent data across clients.

#17 I think I got this one by linking the JS models in drying.html. If
not that, then it is included from fixing the refresh bug.

--- a/drying.html
+++ b/drying.html
@@ -14,9 +14,9 @@ http://demos.jquerymobile.com/1.4.4/theme-default/
     <link rel="stylesheet" href="css/machine.css" />
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.js"></script>
-    <!--<script src="js/classes/Customer.js"></script>-->
-    <!--<script src="js/classes/Clothes.js"></script>-->
-    <!--<script src="js/classes/Laundry.js"></script>-->
+    <script src="js/classes/Customer.js"></script>
+    <script src="js/classes/Clothes.js"></script>
+    <script src="js/classes/Laundry.js"></script>
     <script src="js/classes/Machine.js"></script>
     <script src="js/drying.js"></script>
 
@@ -95,8 +95,9 @@ http://demos.jquerymobile.com/1.4.4/theme-default/
         <br>
     </div><!-- /content -->
 
-    <!-- Footer -->
-    <div data-role="footer" data-position="fixed">
+    <!-- Refresh Button -->
+    <div style="text-align: center;">
+        <a id="refresh-dry-btn" data-role="button" style="width: 250px;margin: 0 auto;">Refresh Page</a>
     </div>
 
     <!-- Load Dryer Popup -->
