--- a/washing.html
+++ b/washing.html
@@ -87,8 +87,9 @@ http://demos.jquerymobile.com/1.4.4/theme-default/
         <br>
     </div><!-- /content -->
 
-    <!-- Footer -->
-    <div data-role="footer" data-position="fixed">
+    <!-- Refresh Button -->
+    <div style="text-align: center;">
+        <a id="refresh-wash-btn" data-role="button" style="width: 250px;margin: 0 auto;">Refresh Page</a>
     </div>
 
     <div data-role="popup" id="load_wash_popup" data-theme="a" class="ui-corner-all">
