--- a/admin/employees_view.html
+++ b/admin/employees_view.html
@@ -2,18 +2,13 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>EV Admin Page</title>
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.css" />
-    <!--<link rel="stylesheet" href="themes/Theme6.min.css"/>-->
-    <!--<link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />-->
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.js"></script>
+    <title></title>
 </head>
 <body>
-<div data-role="page" id="admin_page">
+<div data-role="page" id="employees_page">
     <!-- Header -->
     <div data-role="header">
-        <h1>EV Admin Page</h1>
+        <h1>EV Employees Page</h1>
     </div><!-- /header -->
 
     <!-- Main Page Content -->
@@ -22,10 +17,10 @@
                 <li><a href="admin/laundry_list.html">Laundry List</a></li>
                 <li><a href="admin/employees_view.html">Employees</a></li>
                 <li><a href="admin/customers_view.html">Customers</a></li>
+                <li><a href="admin/colors_view.html">Colors</a></li>
                 <li><a href="admin/create.html">Reset Data</a></li>
         </ul>
     </div>
 </div>
-
 </body>
 </html>
