--- a/admin/create.html
+++ b/admin/create.html
@@ -16,8 +16,8 @@
 
     <!-- Header and Navigation Bar -->
     <div data-role="header">
-        <h1>Sorting</h1>
-        <a href="../admin.html" class="ui-btn ui-corner-all ui-shadow ui-icon-user ui-btn-icon-left">Admin</a>
+        <h1>Reset Database</h1>
+        <a href="../admin.html" class="ui-btn ui-corner-all ui-shadow ui-icon-home ui-btn-icon-left">Admin</a>
     </div><!-- /header -->
 
     <!-- Main Page Content -->
