Laundry view, bug fixes, refactoring
This commit includes a stub for an individual laundry’s view. It still
needs to fill in data.

#23 Dryers 5,6 work now.

#21 Pretty sure I got rid of this.

#19 This works for sorting and folding.

#15 Fixed.

#10 Beginning a sort or fold with no available colors is impossible now.

#9 I hit last commit. I have customer data but not employee data. I’m
still using test data for now.

--- a/admin.html
+++ b/admin.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>EV Admin Page</title>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.css" />
-    <!--<link rel="stylesheet" href="themes/Theme6.min.css"/>-->
-    <!--<link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />-->
+    <link rel="stylesheet" href="themes/theme6.min.css"/>
+    <link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.js"></script>
 </head>
@@ -14,16 +14,16 @@
     <script src="admin/admin.js"></script>
     <!-- Header -->
     <div data-role="header">
-        <h1>EV Admin Page</h1>
+        <h1>EV Admin Page2</h1>
     </div><!-- /header -->
 
     <!-- Main Page Content -->
     <div class="ui-content" role="main">
         <ul id="admin_list" data-role="listview" data-inset="true">
-            <li><a href="admin/laundry_list.html">Laundry List</a></li>
-            <li><a href="admin/employees_view.html">Employees</a></li>
-            <li><a href="admin/customers_view.html">Customers</a></li>
-            <li><a href="admin/create.html">Reset Data</a></li>
+            <li><a data-ajax="false" href="admin/laundry_list.html">Laundry List</a></li>
+            <li><a data-ajax="false" href="admin/employee_list.html">Employees</a></li>
+            <li><a data-ajax="false" href="admin/customer_list.html">Customers</a></li>
+            <li><a data-ajax="false" href="admin/create.html">Reset Data</a></li>
         </ul>
     </div>
 </div>
