--- a/admin/laundry_list.html
+++ b/admin/laundry_list.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.css" />
-    <!--<link rel="stylesheet" href="themes/Theme6.min.css"/>-->
-    <!--<link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />-->
+    <link rel="stylesheet" href="themes/Theme6.min.css"/>
+    <link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.js"></script>
 </head>
 <body>
-<div data-role="page" id="employees_page">
+<div data-role="page" id="laundries_page">
     <script src="../js/classes/Laundry.js"></script>
     <script src="laundry_list.js"></script>
     <!-- Header -->
