--- a/folding.html
+++ b/folding.html
@@ -148,13 +148,13 @@ http://demos.jquerymobile.com/1.4.4/theme-default/
             </div>
             <div class="ui-field-contain">
                 <label>
-                    <input type="checkbox" id="inventory_accurate" name="inventory_accurate">Inventory Accurate?
+                    <input type="checkbox" id="fold_inventory_accurate" name="fold_inventory_accurate">Inventory Accurate?
                 </label>
             </div>
 
             <!-- Form Submission -->
             <div class="ui-field-contain">
-                <input type="submit" id="folding-submit-btn" value="Submit">
+                <input type="button" id="folding-submit-btn" value="Submit">
             </div>
         </form>  <!-- /form -->
     </div><!-- /content -->
