--- a/sorting.html
+++ b/sorting.html
@@ -38,7 +38,13 @@ http://demos.jquerymobile.com/1.4.4/theme-default/
 <body>
 
 <div data-role="page" id="new_sort">
-    <script src="js/sorting.js"></script>
+    <script src="js/classes/Customer.js"></script>
+    <script src="js/classes/Color.js"></script>
+    <script src="js/classes/Laundry.js"></script>
+    <script src="js/classes/Count.js"></script>
+    <script src="js/classes/Event.js"></script>
+    <!--<script src="js/sorting.js"></script>-->
+    <script src="js/sorting2.js"></script>
     <!-- Header and Navigation Bar -->
     <div data-role="header">
         <h1>Sorting</h1>
@@ -72,9 +78,6 @@ http://demos.jquerymobile.com/1.4.4/theme-default/
             <div class="ui-field-contain">
                 <label for="select-customer-name" class="select">Customer Name:</label>
                 <select name="select-customer-name" id="select-customer-name" data-native-menu="false">
-                    <option value="1">Claire Customer</option>
-                    <option value="2">Sarah Sorority</option>
-                    <option value="3">Greg Granville</option>
                 </select>
             </div>
 
