--- a/folding.html
+++ b/folding.html
@@ -13,7 +13,6 @@ http://demos.jquerymobile.com/1.4.4/theme-default/
     <link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.js"></script>
-    <script src="js/folding.js"></script>
 
     <style>
         .noshadow * {
@@ -29,6 +28,13 @@ http://demos.jquerymobile.com/1.4.4/theme-default/
 <body>
 
 <div data-role="page" id="new_fold">
+    <script src="js/classes/Customer.js"></script>
+    <script src="js/classes/Color.js"></script>
+    <script src="js/classes/Event.js"></script>
+    <script src="js/classes/Count.js"></script>
+    <script src="js/classes/Laundry.js"></script>
+    <!--<script src="js/sorting.js"></script>-->
+    <script src="js/folding2.js"></script>
 
     <!-- Header and Navigation Bar -->
     <div data-role="header">
