--- a/washing.html
+++ b/washing.html
@@ -16,6 +16,7 @@ http://demos.jquerymobile.com/1.4.4/theme-default/
     <script src="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.js"></script>
     <script src="js/classes/Customer.js"></script>
     <script src="js/classes/Count.js"></script>
+    <script src="js/classes/Event.js"></script>
     <script src="js/classes/Laundry.js"></script>
     <script src="js/classes/Machine.js"></script>
     <script src="js/washing.js"></script>
@@ -116,7 +117,7 @@ http://demos.jquerymobile.com/1.4.4/theme-default/
 
             <!-- Form Submission -->
             <div class="ui-field-contain">
-                <input type="submit" id="load-washer-submit-btn" value="Submit">
+                <input type="button" id="load-washer-submit-btn" value="Submit">
             </div>
         </form>  <!-- /form -->
     </div>
