--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@ http://demos.jquerymobile.com/1.4.4/theme-default/
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>EV Laundry - Employee Login</title>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.css" />
-    <link rel="stylesheet" href="themes/Theme6.min.css"/>
+    <link rel="stylesheet" href="themes/theme6.min.css"/>
     <link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.js"></script>
