--- a/admin/create.html
+++ b/admin/create.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>EV Admin Page</title>
     <!--<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.css" />-->
-    <!--<link rel="stylesheet" href="themes/Theme6.min.css"/>-->
+    <!--<link rel="stylesheet" href="themes/theme6.min.css"/>-->
     <!--<link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />-->
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.js"></script>
